--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </ul>
         </div>
     </nav>
+
     <!-- Landing Section -->
     <section class="banner">
         <div class="content">
@@ -40,6 +41,45 @@
             </button>
         </div>
     </section>
+
+    <!-- Our clubs Section -->
+
+    <!-- What We Do Section -->
+
+    <!-- Contact us Section -->
+    <section class="contact_us">
+
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="social_link">
+            <div class="sm_container">
+                <img src="./Images/instagram.png" alt="Instagram">
+            </div>
+            <div class="sm_container">
+                <img src="./Images/facebook.png" alt="Facebook">
+            </div>
+            <div class="sm_container">
+                <img src="./Images/linkedin.png" alt="LinkedIn">
+            </div>
+            <div class="sm_container">
+                <img src="./Images/gmail.png" alt="Gmail">
+            </div>
+        </div>
+        <div class="nav_links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Our Clubs</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>&copy; GeeksofCanara <span>2022</span></p>
+        </div>
+    </footer>
 </body>
 
 </html>
