--- a/index.html
+++ b/index.html
@@ -48,23 +48,42 @@
 
     <!-- Contact us Section -->
     <section class="contact_us">
-
+        <h2 class="contact_heading">Contact Us</h2>
+        <div class="underline"></div>
+        <form action="" method="">
+            <div class="form_name">
+                <label for="name">Name</label><br>
+                <input type="text" id="name" placeholder=" Your name">
+            </div>
+            <div class="form_email">
+                <label for="email">Email</label><br>
+                <input type="email" id="email" placeholder=" Your email">
+            </div>
+            <div class="form_subject">
+                <label for="subject">Subject</label><br>
+                <input type="text" id="subject" placeholder=" Eg. Club Registration">
+            </div>
+            <div class="form_message">
+                <label for="message">Message</label><br>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder=" Type something here..."></textarea>
+            </div>
+        </form>
     </section>
 
     <!-- Footer Section -->
     <footer>
         <div class="social_link">
             <div class="sm_container">
-                <img src="./Images/instagram.png" alt="Instagram">
+                <a href="#"><img src="./Images/instagram.png" alt="Instagram"></a>
             </div>
             <div class="sm_container">
-                <img src="./Images/facebook.png" alt="Facebook">
+                <a href="#"><img src="./Images/facebook.png" alt="Facebook"></a>
             </div>
             <div class="sm_container">
-                <img src="./Images/linkedin.png" alt="LinkedIn">
+                <a href="#"><img src="./Images/linkedin.png" alt="LinkedIn"></a>
             </div>
             <div class="sm_container">
-                <img src="./Images/gmail.png" alt="Gmail">
+                <a href="#"><img src="./Images/gmail.png" alt="Gmail"></a>
             </div>
         </div>
         <div class="nav_links">
