--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Geeks Of Canara</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,17 +27,25 @@
     </nav>
     <!-- Landing Section -->
     <section class="banner">
-        <div class="content">
-            <div class="banner-title">
-                <h2>Welcome to</h2>
-                <h1>Geeks Of Canara</h1>
+        <div class="grid-container">
+            <div class="content">
+                <div class="banner-title">
+                    <h2>Welcome to</h2>
+                    <h1>Geeks Of Canara</h1>
+                </div>
+                <p>
+                    We are a Technical club of CEC aiming at Realizing the idea and Inspiring the next!
+                </p>
+                <button class="btn">
+                    Explore Our Team
+                </button>
             </div>
-            <p>
-                We are a Technical club of CEC aiming at Realizing the idea and Inspiring the next!
-            </p>
-            <button class="btn">
-                Explore Our Team
-            </button>
+            <div class="banner-image">
+
+            </div>
+        </div>
+        <div class="scroll">
+            <a id="scroll-btn" href="#section-2"></a>
         </div>
     </section>
 </body>
