--- a/index.html
+++ b/index.html
@@ -58,23 +58,24 @@
     <section class="contact_us">
         <h2 class="contact_heading">Contact Us</h2>
         <div class="underline"></div>
-        <form action="" method="">
-            <div class="form_name">
+        <form action="" method="" autocomplete="off">
+            <div class="form_box">
                 <label for="name">Name</label><br>
-                <input type="text" id="name" placeholder=" Your name">
+                <input type="text" class="input" id="name" placeholder=" Your name">
             </div>
-            <div class="form_email">
+            <div class="form_box">
                 <label for="email">Email</label><br>
-                <input type="email" id="email" placeholder=" Your email">
+                <input type="email" class="input" id="email" placeholder=" Your email">
             </div>
-            <div class="form_subject">
+            <div class="form_box">
                 <label for="subject">Subject</label><br>
-                <input type="text" id="subject" placeholder=" Eg. Club Registration">
+                <input type="text" class="input" id="subject" placeholder=" Eg. Club Registration">
             </div>
-            <div class="form_message">
+            <div class="form_box">
                 <label for="message">Message</label><br>
-                <textarea name="message" id="message" cols="30" rows="10" placeholder=" Type something here..."></textarea>
+                <textarea name="message" class="input" id="message" cols="30" rows="10" placeholder=" Type something here..."></textarea>
             </div>
+            <button class="submit"><span>Send the Message</span></button>
         </form>
     </section>
 
@@ -104,7 +105,7 @@
             </ul>
         </div>
         <div class="copyright">
-            <p>&copy; GeeksofCanara <span>2022</span></p>
+            <p><span>&copy;</span> GeeksofCanara <span>2022</span></p>
         </div>
     </footer>
 </body>
