--- a/index.html
+++ b/index.html
@@ -10,24 +10,14 @@
 </head>
 
 <body>
-    <!-- Navigation Section -->
-    <nav>
-        <div class="logo">
-            <span>G</span>OC
-        </div>
-        <div class="menu-items">
-            <ul>
-                <li><a href="#" id="active">Home</a></li>
-                <li><a href="#">OurClubs</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Landing Section -->
+    <!-- Hero Section -->
     <section class="banner">
+        <h1 id="bgtext1">
+            TECHNICAL
+        </h1>
+        <h1 id="bgtext2">
+            CLUB
+        </h1>
         <div class="grid-container">
             <div class="content">
                 <div class="banner-title">
@@ -42,71 +32,14 @@
                 </button>
             </div>
             <div class="banner-image">
-
+                hello world
             </div>
         </div>
         <div class="scroll">
             <a id="scroll-btn" href="#section-2"></a>
         </div>
     </section>
-
-    <!-- Our clubs Section -->
-
-    <!-- What We Do Section -->
-
-    <!-- Contact us Section -->
-    <section class="contact_us">
-        <h2 class="contact_heading">Contact Us</h2>
-        <div class="underline"></div>
-        <form action="" method="">
-            <div class="form_name">
-                <label for="name">Name</label><br>
-                <input type="text" id="name" placeholder=" Your name">
-            </div>
-            <div class="form_email">
-                <label for="email">Email</label><br>
-                <input type="email" id="email" placeholder=" Your email">
-            </div>
-            <div class="form_subject">
-                <label for="subject">Subject</label><br>
-                <input type="text" id="subject" placeholder=" Eg. Club Registration">
-            </div>
-            <div class="form_message">
-                <label for="message">Message</label><br>
-                <textarea name="message" id="message" cols="30" rows="10" placeholder=" Type something here..."></textarea>
-            </div>
-        </form>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <div class="social_link">
-            <div class="sm_container">
-                <a href="#"><img src="./Images/instagram.png" alt="Instagram"></a>
-            </div>
-            <div class="sm_container">
-                <a href="#"><img src="./Images/facebook.png" alt="Facebook"></a>
-            </div>
-            <div class="sm_container">
-                <a href="#"><img src="./Images/linkedin.png" alt="LinkedIn"></a>
-            </div>
-            <div class="sm_container">
-                <a href="#"><img src="./Images/gmail.png" alt="Gmail"></a>
-            </div>
-        </div>
-        <div class="nav_links">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Our Clubs</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-        <div class="copyright">
-            <p>&copy; GeeksofCanara <span>2022</span></p>
-        </div>
-    </footer>
+<!-- Hero Section End -->
 </body>
 
 </html>
