--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <label for="message">Message</label><br>
                 <textarea name="message" class="input" id="message" cols="30" rows="10" placeholder=" Type something here..."></textarea>
             </div>
-            <button class="submit"><span>Send the Message</span></button>
+            <button class="submit"><span>Send the Message<img src="./Images/arrow.svg" alt="arrow"></span></button>
         </form>
     </section>
 
@@ -83,16 +83,16 @@
     <footer>
         <div class="social_link">
             <div class="sm_container">
-                <a href="#"><img src="./Images/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="./Images/instagram.svg" alt="Instagram"></a>
             </div>
             <div class="sm_container">
-                <a href="#"><img src="./Images/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="./Images/facebook.svg" alt="Facebook"></a>
             </div>
             <div class="sm_container">
-                <a href="#"><img src="./Images/linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="./Images/linkedin.svg" alt="LinkedIn"></a>
             </div>
             <div class="sm_container">
-                <a href="#"><img src="./Images/gmail.png" alt="Gmail"></a>
+                <a href="#"><img src="./Images/email.svg" alt="Gmail"></a>
             </div>
         </div>
         <div class="nav_links">
