--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
 </head>
 
 <body>
+<!-- Nav bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">GOC </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Our Clubs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Goals</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Our Clubs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- Nav bar end -->
     <!-- Hero Section -->
     <section class="banner">
         <h1 id="bgtext1">
