--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     We are a Technical club of CEC aiming at Realizing the idea and Inspiring the next!
                 </p>
                 <button class="btn">
-                    Explore Our Team
+                    <span>Explore Our Team <img src="./Images/arrow.svg" alt="arrow"></span>
                 </button>
             </div>
             <div class="banner-image">
