--- a/index.html
+++ b/index.html
@@ -1,74 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geeks Of Canara</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-<!-- Nav bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">GOC </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Our Clubs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Goals</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Our Clubs</a>
-              </li>
-            </ul>
-          </div>
+  <body>
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">GOC </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Clubs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Goals</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Clubs</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-      <!-- Nav bar end -->
+      </div>
+    </nav>
+    <!-- Nav bar end -->
     <!-- Hero Section -->
     <section class="banner">
-        <h1 id="bgtext1">
-            TECHNICAL
-        </h1>
-        <h1 id="bgtext2">
-            CLUB
-        </h1>
-        <div class="grid-container">
-            <div class="content">
-                <div class="banner-title">
-                    <h2>Welcome to</h2>
-                    <h1>Geeks Of Canara</h1>
-                </div>
-                <p>
-                    We are a Technical club of CEC aiming at Realizing the idea and Inspiring the next!
-                </p>
-                <button class="btn">
-                    <span>Explore Our Team <img src="./Images/arrow.svg" alt="arrow"></span>
-                </button>
-            </div>
-            <div class="banner-image">
-                hello world
-            </div>
+      <h1 id="bgtext1">TECHNICAL</h1>
+      <h1 id="bgtext2">CLUB</h1>
+      <div class="grid-container">
+        <div class="content">
+          <div class="banner-title">
+            <h2>Welcome to</h2>
+            <h1 id="type2"><!--Geeks Of Canara--></h1>
+          </div>
+          <p>
+            We are a Technical club of CEC aiming at Realizing the idea and
+            Inspiring the next!
+          </p>
+          <button class="btn">
+            <span
+              >Explore Our Team <img src="./Images/arrow.svg" alt="arrow"
+            /></span>
+          </button>
         </div>
-        <div class="scroll">
-            <a id="scroll-btn" href="#section-2"></a>
-        </div>
+        <div class="banner-image">hello world</div>
+      </div>
+      <div class="scroll">
+        <a id="scroll-btn" href="#section-2"></a>
+      </div>
     </section>
-<!-- Hero Section End -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
+    <!-- Hero Section End -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js">
+    </script>
+    <script>
+      var type2 = document.getElementById('type2');
+      var typewriter = new Typewriter(type2, {
+          loop: false
+      });
 
+      typewriter.typeString('Geeks Of Canara')
+      .start()
+    </script>
+  </body>
 </html>
