fixed button hover

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             We are a Technical club of CEC aiming at Realizing the idea and
             Inspiring the next!
           </p>
-          <button class="btn">
+          <button class="button">
             <span
               >Explore Our Team <img src="./Images/arrow.svg" alt="arrow"
             /></span>
