--- a/team.html
+++ b/team.html
@@ -67,8 +67,8 @@
         <div class="nav_head">Team</div>
 
         <div class="inner_head">
-          <div class="inner_text active">Students</div>
-          <div class="inner_text">Faculty</div>
+          <div id="Students" class="inner_text active">Students</div>
+          <div id="Faculty" class="inner_text">Faculty</div>
         </div>
       </div>
 
@@ -90,7 +90,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/email.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -109,7 +109,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/email.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -128,7 +128,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/email.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -147,7 +147,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -166,7 +166,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -185,7 +185,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -204,7 +204,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -223,7 +223,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
 
@@ -244,7 +244,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -263,7 +263,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -282,7 +282,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -301,7 +301,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/email.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
         </div>
@@ -337,4 +337,5 @@
         </div>
       </footer>
   </body>
+  <script src="script.js"></script>
 </html>
