--- a/whatwedo.html
+++ b/whatwedo.html
@@ -12,7 +12,7 @@
 <body>
     <section>
 
-        <div class="team-area">
+        <div class="whatwedo-area">
             <div>
                 <h1 class="wwd-head">
                     What we do
