fix grid and add event cards

--- a/index.html
+++ b/index.html
@@ -41,42 +41,135 @@
     <!-- end of navbar -->
 
     <!-- Event Section Begin-->
-    <div class="event-section">
+    <div class="team-area">
+        <div class="sub-nav">
+            <div class="nav_head">Events</div>
 
-        <div class="event-title-date">
-            <h2>Events</h2>
-            <ul class="event-title-years">
-                <li class="active"> <a href="#">2021</a> </li>
-                <li> <a href="#">2021</a> </li>
-            </ul>
+            <div class="inner_head">
+                <div class="inner_text active">2021</div>
+                <div class="inner_text">2020</div>
+            </div>
         </div>
 
-    </div>
-    <!-- Event section end -->
+        <!-- Event section end -->
+        <div class="main">
+            <div class="card-container">
 
-    <!-- Footer Section -->
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- Footer Section -->
+    </div>
+
+    <!-- Footer -->
     <footer>
         <div class="social_link">
-            <div class="sm_container">
-                <a href="#"><img src="./Images/instagram.png" alt="Instagram"></a>
-            </div>
-            <div class="sm_container">
-                <a href="#"><img src="./Images/facebook.png" alt="Facebook"></a>
-            </div>
-            <div class="sm_container">
-                <a href="#"><img src="./Images/linkedin.png" alt="LinkedIn"></a>
-            </div>
-            <div class="sm_container">
-                <a href="#"><img src="./Images/gmail.png" alt="Gmail"></a>
-            </div>
+            <a href="#" class="sm_container">
+                <div><img src="./Images/instagram.svg" alt="Instagram" /></div>
+            </a href="#">
+            <a href="#" class="sm_container">
+                <div><img src="./Images/facebook.svg" alt="Facebook" /></div>
+            </a href="#">
+            <a href="#" class="sm_container">
+                <div><img src="./Images/linkedin.svg" alt="LinkedIn" /></div>
+            </a href="#">
+            <a href="#" class="sm_container">
+                <div><img src="./Images/email.svg" alt="Gmail" /></div>
+            </a href="#">
         </div>
         <div class="nav_links">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Our Clubs</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="first_link">Home</a></li>
+                <li><a href="#">Clubs</a></li>
+                <li><a href="#">Goals</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="/team.html" class="last_link">Team</a></li>
             </ul>
         </div>
         <div class="copyright">
