--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                         <a class="nav-link" href="#">Goals</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our Clubs</a>
+                        <a class="nav-link" href="/events.html">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-last" href="/team.html">Team</a>
                     </li>
                 </ul>
             </div>
