--- a/events.html
+++ b/events.html
@@ -75,7 +75,7 @@
                 <a href="#"><img src="./Images/instagram.svg" alt="Instagram"></a>
             </div>
             <div class="sm_container">
-                <a href="#"><img src="./Images/github.svg" alt="Facebook"></a>
+                <a href="#"><img src="./Images/github.svg" alt="Github"></a>
             </div>
             <div class="sm_container">
                 <a href="#"><img src="./Images/linkedin.svg" alt="LinkedIn"></a>
