--- a/team.html
+++ b/team.html
@@ -24,43 +24,41 @@
   <body>
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">GOC </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/index.html">Our Clubs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/index.html">Goals</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/events.html">Events</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link link-last active" href="#">Team</a>
-            </li>
-          </ul>
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">GOC </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#our_club">Our Clubs</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#goals">Goals</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/events.html">Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-last" href="/team.html">Team</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <!-- Nav bar end -->
+      </nav>
+      <!-- Nav bar end -->
 
     <div class="team-area">
       <div class="sub-nav">
@@ -90,7 +88,102 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/email.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Design Club Lead</p>
+              <p class="head_name">Paramashiva Karanth</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
+              <img class="logo_img" src="Images/team/github.svg" alt="" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Design Club Lead</p>
+              <p class="head_name">Paramashiva Karanth</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
+              <img class="logo_img" src="Images/team/github.svg" alt="" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Design Club Lead</p>
+              <p class="head_name">Paramashiva Karanth</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
+              <img class="logo_img" src="Images/team/github.svg" alt="" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Design Club Lead</p>
+              <p class="head_name">Paramashiva Karanth</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
+              <img class="logo_img" src="Images/team/github.svg" alt="" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Design Club Lead</p>
+              <p class="head_name">Paramashiva Karanth</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
+              <img class="logo_img" src="Images/team/github.svg" alt="" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -128,102 +221,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/email.svg" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
 
@@ -244,7 +242,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -263,7 +261,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -282,7 +280,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/mail" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -301,7 +299,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/email.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
         </div>
@@ -320,7 +318,7 @@
             <div><img src="./Images/linkedin.svg" alt="LinkedIn" /></div>
           </a href="#">
           <a href="#" class="sm_container">
-            <div><img src="./Images/email.svg" alt="Gmail" /></div>
+            <div><img src="./Images/team/mail.svg" alt="Gmail" /></div>
           </a href="#">
         </div>
         <div class="nav_links">
@@ -337,4 +335,10 @@
         </div>
       </footer>
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"
+    ></script>
+    <script src="/team.js"></script>
 </html>
