Major bug fixes

--- a/team.html
+++ b/team.html
@@ -65,8 +65,8 @@
         <div class="nav_head">Team</div>
 
         <div class="inner_head">
-          <div class="inner_text active">Students</div>
-          <div class="inner_text">Faculty</div>
+            <div id="Students" class="inner_text active">Students</div>
+            <div id="Faculty" class="inner_text">Faculty</div>
         </div>
       </div>
 
@@ -202,7 +202,7 @@
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/email.svg" alt="" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" />
             </div>
           </div>
           <div class="card">
