Club layout and minor fixes in navigation

--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
       <div class="nav_links">
         <ul>
           <li><a href="#" class="first_link">Home</a></li>
-          <li><a href="#">Clubs</a></li>
-          <li><a href="#">Goals</a></li>
+          <li><a href="#our_club">Clubs</a></li>
+          <li><a href="#goals">Goals</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="/team.html" class="last_link">Team</a></li>
         </ul>
