--- a/team.html
+++ b/team.html
@@ -40,19 +40,19 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#our_club">Our Clubs</a>
+                <a class="nav-link" href="index.html#our_club">Our Clubs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#goals">Goals</a>
+                <a class="nav-link" href="index.html#goals">Goals</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/events.html">Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link link-last" href="/team.html">Team</a>
+                <a class="nav-link link-last active" href="/team.html">Team</a>
               </li>
             </ul>
           </div>
@@ -318,14 +318,14 @@
             <div><img src="./Images/linkedin.svg" alt="LinkedIn" /></div>
           </a href="#">
           <a href="#" class="sm_container">
-            <div><img src="./Images/team/mail.svg" alt="Gmail" /></div>
+            <div><img src="./Images/email.svg" alt="Gmail" /></div>
           </a href="#">
         </div>
         <div class="nav_links">
           <ul>
             <li><a href="index.html" class="first_link">Home</a></li>
-            <li><a href="index.html">Clubs</a></li>
-            <li><a href="index.html">Goals</a></li>
+            <li><a href="index.html#our_club">Clubs</a></li>
+            <li><a href="index.html#goals">Goals</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="/team.html" class="last_link">Team</a></li>
           </ul>
