--- a/events.html
+++ b/events.html
@@ -8,89 +8,180 @@
     <title>Geeks Of Canara</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="event.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="event.css">
 </head>
 
 <body>
 
-    <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">GOC </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Our Clubs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Goals</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Events</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link-last" href="/team.html">Team</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- Nav bar end -->
-
-    <!-- end of navbar -->
+   <!-- Nav bar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">GOC </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#our_club">Our Clubs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#goals">Goals</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/events.html">Events</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-last" href="/team.html">Team</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Nav bar end -->
 
     <!-- Event Section Begin-->
-    <div class="event-section">
+    <div class="team-area">
+        <div class="sub-nav">
+            <div class="nav_head">Events</div>
 
-        <div class="event-title-date">
-            <h2>Events</h2>
-            <ul class="event-title-years">
-                <li class="active"> <a href="#">2021</a> </li>
-                <li> <a href="#">2021</a> </li>
-            </ul>
+            <div class="inner_head">
+                <div class="inner_text active">2021</div>
+                <div class="inner_text">2020</div>
+            </div>
         </div>
 
-    </div>
-    <!-- Event section end -->
+        <!-- Event section end -->
+        <div class="main">
+            <div class="card-container">
 
-    <!-- Footer Section -->
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-img-cover">
+                        <img src="https://picsum.photos/seed/picsum/200/300" alt="image_image" />
+                    </div>
+
+                    <div class="event-content">
+                        <h3 class="event_title">Git and Github</h3>
+                        <p class="event_content">My attractive, functional and easy to use UX/UI will attract your users attract your users</p>
+                        <button class="visit-button">
+                            <p>View more</p>
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- Footer Section -->
+    </div>
+
+    <!-- Footer -->
     <footer>
         <div class="social_link">
-            <div class="sm_container">
-                <a href="#"><img src="./Images/instagram.svg" alt="Instagram"></a>
-            </div>
-            <div class="sm_container">
-                <a href="#"><img src="./Images/github.svg" alt="Github"></a>
-            </div>
-            <div class="sm_container">
-                <a href="#"><img src="./Images/linkedin.svg" alt="LinkedIn"></a>
-            </div>
-            <div class="sm_container">
-                <a href="#"><img src="./Images/email.svg" alt="Gmail"></a>
-            </div>
+            <a href="#" class="sm_container">
+                <div><img src="./Images/instagram.svg" alt="Instagram" /></div>
+            </a href="#">
+            <a href="#" class="sm_container">
+                <div><img src="./Images/facebook.svg" alt="Facebook" /></div>
+            </a href="#">
+            <a href="#" class="sm_container">
+                <div><img src="./Images/linkedin.svg" alt="LinkedIn" /></div>
+            </a href="#">
+            <a href="#" class="sm_container">
+                <div><img src="./Images/email.svg" alt="Gmail" /></div>
+            </a href="#">
         </div>
         <div class="nav_links">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Our Clubs</a></li>
-                <li><a href="index.html">Goals</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="/team.html">Team</a></li>
+                <li><a href="#" class="first_link">Home</a></li>
+                <li><a href="#">Clubs</a></li>
+                <li><a href="#">Goals</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="/team.html" class="last_link">Team</a></li>
             </ul>
         </div>
         <div class="copyright">
