--- a/team.html
+++ b/team.html
@@ -18,14 +18,14 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="team.css" />
 
-    <title>Document</title>
+    <title>Team</title>
   </head>
 
   <body>
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">GOC </a>
+          <a class="navbar-brand" href="index.html">GOC </a>
           <button
             class="navbar-toggler"
             type="button"
