--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">GOC </a>
+          <a class="navbar-brand" href="/index.html">GOC </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -287,85 +287,7 @@
                 </div>
             </div>
          </div>
-            <!--
-            <div class="main">
-                <div class="card-container">
-                    <div class="card">
-                        <div class="card-head">
-                            <h1 class="card-head-text">
-                                Workshop
-                            </h1>
-                            <div class="card-logo"></div>
-                        </div>
-                        <div class="card-text">
-                            Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Molestias culpa soluta corporis.
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-head">
-                            <h1 class="card-head-text">
-                                Hackathon
-                            </h1>
-                            <div class="card-logo"></div>
-                        </div>
-                        <div class="card-text">
-                            Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Molestias culpa soluta corporis.
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-head">
-                            <h1 class="card-head-text">
-                                Project
-                            </h1>
-                            <div class="card-logo"></div>
-                        </div>
-                        <div class="card-text">
-                            Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Molestias culpa soluta corporis.
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-head">
-                            <h1 class="card-head-text">
-                                Peer learning
-                            </h1>
-                            <div class="card-logo"></div>
-                        </div>
-                        <div class="card-text">
-                            Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Molestias culpa soluta corporis.
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-head">
-                            <h1 class="card-head-text">
-                                Mentorship
-                            </h1>
-                            <div class="card-logo"></div>
-                        </div>
-                        <div class="card-text">
-                            Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Molestias culpa soluta corporis.
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-head">
-                            <h1 class="card-head-text">
-                                Contests
-                            </h1>
-                            <div class="card-logo"></div>
-                        </div>
-                        <div class="card-text">
-                            Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Molestias culpa soluta corporis.
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div> -->
+            
     </section>
 
 
