Minor Design fixes

--- a/index.html
+++ b/index.html
@@ -64,17 +64,23 @@
           <div class="content">
             <div class="banner-title">
               <h2>Welcome to</h2>
-              <h1 id="type2"><!--Geeks Of Canara--></h1>
+              <h1 id="type2">Geeks Of Canara</h1>
             </div>
             <p>
               We are a Technical club of CEC aiming at Realizing the idea and
               Inspiring the next!
             </p>
-            <button class="button">
-              <span
+            <a class="button btn" href="team.html">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              <div
                 >Explore Our Team <img src="./Images/arrow.svg" alt="arrow"
-              /></span>
-            </button>
+              /></div>
+            </a>
           </div>
           <div class="banner-image"><img src="./Images/hero-illustration.png" alt="Geeks of Canara"></div>
         </div>
