animation after conflict fix

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h1 id="bgtext1">TECHNICAL</h1>
         <h1 id="bgtext2">CLUB</h1>
         <div class="grid-container">
-          <div class="content">
+          <div class="content gs_reveal_fromLeft gs_reveal">
             <div class="banner-title">
               <h2>Welcome to</h2>
               <h1 id="type2">Geeks Of Canara</h1>
@@ -82,7 +82,7 @@
               /></div>
             </a>
           </div>
-          <div class="banner-image"><img src="./Images/hero-illustration.png" alt="Geeks of Canara"></div>
+          <div class="banner-image gs_reveal_fromRight gs_reveal"><img src="./Images/hero-illustration.png" alt="Geeks of Canara"></div>
         </div>
         <div class="scroll">
           <a id="scroll-btn" href="#section-2"></a>
@@ -94,13 +94,13 @@
         <h2 class="our_club_heading">Our Clubs</h2>
       <div class="underline"></div>
       <div class="club_container">
-            <div class="club_navigator">
+            <div class="club_navigator gs_reveal_fromLeft gs_reveal">
                 <button class="club_button active" id="club_btn_1" data-id="1"><div class="club_name">Coding Club</div><div class="club_icon"></div><div class="pointer"></div></button>
                 <button class="club_button" id="club_btn_2" data-id="2"><div class="club_name">Design Club</div><div class="club_icon"></div><div class="pointer"></div></button>
                 <button class="club_button" id="club_btn_3" data-id="3"><div class="club_name">Geekhub</div><div class="club_icon"></div><div class="pointer"></div></button>
                 <button class="club_button" id="club_btn_4" data-id="4"><div class="club_name">Technovation</div><div class="club_icon"></div><div class="pointer"></div></button>
             </div>
-            <div class="club_info">
+            <div class="club_info gs_reveal_fromRight gs_reveal">
                 <div class="card">
                     <div class="card-img">
                       
@@ -302,7 +302,7 @@
       <h2 class="contact_heading">Contact Us</h2>
       <div class="underline"></div>
       <form action="" method="" class="form" autocomplete="off">
-        <div class="form_group">
+        <div class="form_group gs_reveal_fromBottom gs_reveal">
             <div class="form_box">
               <label for="name">Name</label><br />
               <input type="text" class="input" id="name" placeholder=" Your name" />
@@ -317,7 +317,7 @@
               />
             </div>
         </div>
-        <div class="form_box">
+        <div class="form_box gs_reveal_fromBottom gs_reveal">
           <label for="subject">Subject</label><br />
           <input
             type="text"
@@ -326,7 +326,7 @@
             placeholder=" Eg. Club Registration"
           />
         </div>
-        <div class="form_box">
+        <div class="form_box gs_reveal_fromBottom gs_reveal">
           <label for="message">Message</label><br />
           <textarea
             name="message"
@@ -385,6 +385,11 @@
 
     <!-- typewriter end -->
     <script src="./script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
+    <script src="stagger.js">
+    </script>
+    <script src="scrolltrigger.js"></script>
     
   </body>
 </html>
