--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             placeholder=" Type something here..."
           ></textarea>
         </div>
-        <button class="submit button">
+        <button class="submit button gs_reveal_fromBottom gs_reveal">
           <span
             >Send the Message<img src="./Images/arrow.svg" class="arrow" alt="arrow"
           /></span>
